components/Footer/Footer.module.scss
.footer {
  @media (min-width: 1023px) {
    position: relative;
  }
}
.footerNav {
  background: var(--green);
  text-align: center;
  position: fixed;
  width: calc(100% - 30px);
  bottom: 1rem;
  left: 15px;
  border-radius: var(--border-radius);
  z-index: 9999;

  @media (min-width: 1023px) {
    position: static;
    padding: 1rem;
  }

  a {
    color: white;
    line-height: 0;
    font-weight: 200;

    &:hover {
      text-decoration: underline;
    }
  }

  @media (max-width: 1021px) {
    &::before {
      content: '';
      background: linear-gradient(
        90deg,
        rgba(0, 0, 0, 0) 0%,
        var(--green) 100%
      );
      position: fixed;
      right: 15px;
      width: 2.5rem;
      height: 4.1rem;
      border-top-right-radius: var(--border-radius);
      border-bottom-right-radius: var(--border-radius);
    }
    &::after {
      content: '';
      background: rgb(0, 0, 0);
      background: linear-gradient(
        270deg,
        rgba(0, 0, 0, 0) 0%,
        var(--green) 100%
      );
      position: fixed;
      bottom: 1rem;
      left: 15px;
      width: 2.5rem;
      height: 4.1rem;
      border-top-left-radius: var(--border-radius);
      border-bottom-left-radius: var(--border-radius);
    }
  }
}

ul.menuNav {
  white-space: nowrap;
  width: 100%;
  overflow-x: scroll;
  display: flex;
  margin: 0;

  li {
    display: inline-flex;
  }
}

ul li.footerLogo {
  display: none;

  @media (min-width: 1023px) {
    display: inline-flex;
    margin-bottom: 0.5rem;
  }
}

ul li.menuLink {
  padding: 2rem 1rem 0.3rem 1rem;
  margin-bottom: 1.8rem;

  &:last-child {
    padding-right: 2rem;
  }

  @media (min-width: 768px) {
    &:last-child {
      padding-right: 0;
    }
  }

  @media (min-width: 1023px) {
    padding: 1rem;
    margin: 0;
  }
}

.copyright {
  background-color: var(--grey-soft);
  margin-bottom: 7rem;
  border-radius: var(--border-radius);

  @media (min-width: 1023px) {
    background-color: unset;
    margin-bottom: 0;
  }
}

.copyrightMenu {
  text-transform: lowercase;
  color: var(--white);
  text-align: center;
  font-size: 1rem;

  @media (min-width: 1023px) {
    color: var(--grey-soft);
  }
}

.copyrightMenu a {
  color: var(--white);
  margin: 0;

  &:hover {
    text-decoration: underline;
  }

  @media (min-width: 1023px) {
    color: var(--grey);
  }
}

.socialMenu {
  position: absolute;
  top: 2rem;
  right: 15px;
  background: var(--yellow);
  border-radius: 2rem;

  @media (min-width: 1023px) {
    top: 1.5rem;
    right: unset;
    left: 220px;
    background: unset;
  }
}

.socialList {
  display: flex;
  justify-content: center;
  list-style: none;
  padding: 0.25rem 0.5rem;
  margin: 0;
}
.socialLink a {
  display: flex;
  margin: 0;
  width: 36px;

  @media (min-width: 1023px) {
    width: unset;
  }
}

